--- a/app/views/main_accounts/edit.html.erb
+++ b/app/views/main_accounts/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Edit Main Account</h1>
 
-<%= render 'form', main_account: @main_account %>
+<%= render 'form', main_account: @selected_main_account %>
 
