--- a/app/views/sub_account_transactions/all.html.erb
+++ b/app/views/sub_account_transactions/all.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'sub_account_transactions/transactions', locals: { transactions: @transactions, main_account: @main_account, title: "All Transactions" } %>
+<%= render partial: 'sub_account_transactions/transactions', locals: { transactions: @transactions, main_account: @selected_main_account, title: "All Transactions" } %>
