--- a/app/views/categories/_category_card.html.erb
+++ b/app/views/categories/_category_card.html.erb
@@ -10,12 +10,12 @@
       </button>
       <ul class="dropdown-menu">
         <li>
-          <%= link_to edit_main_account_sub_account_category_path(@main_account, @sub_account, @category), class: "dropdown-item" do %>
+          <%= link_to edit_main_account_sub_account_category_path(@selected_main_account, @sub_account, @category), class: "dropdown-item" do %>
             <i class="fas fa-edit"></i> Edit
           <% end %>
         </li>
         <li>
-          <%= link_to main_account_sub_account_category_path(@main_account, @sub_account, @category),
+          <%= link_to main_account_sub_account_category_path(@selected_main_account, @sub_account, @category),
                       data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this category?" },
                       class: "dropdown-item text-danger" do %>
             <i class="fas fa-trash-alt"></i> Delete
