--- a/app/views/categories/_category_nav.html.erb
+++ b/app/views/categories/_category_nav.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center flex-wrap">
     <% @sub_account.categories.each do |category| %>
       <% if category != @category %>
-        <%= link_to category.title, main_account_sub_account_category_path(@main_account, @sub_account, category), class: "badge bg-primary text-decoration-none me-2 mb-2" %>
+        <%= link_to category.title, main_account_sub_account_category_path(@selected_main_account, @sub_account, category), class: "badge bg-primary text-decoration-none me-2 mb-2" %>
       <% end %>
     <% end %>
   </div>
