--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@main_account, @sub_account, category], local: true, data: { turbo: false }, class: "needs-validation") do |form| %>
+<%= form_with(model: [@selected_main_account, @sub_account, category], local: true, data: { turbo: false }, class: "needs-validation") do |form| %>
   <% if category.errors.any? %>
     <div class="alert alert-danger">
         <% category.errors[:title].each do |message| %>
@@ -24,8 +24,8 @@
   <div class="d-flex justify-content-between mt-4">
     <%= form.submit "Save Category", class: "btn btn-primary" %>
     <% if @category.persisted? %>
-      <%= link_to "Cancel", main_account_sub_account_category_path(@main_account, @sub_account, @category), class: "btn btn-secondary" %>
+      <%= link_to "Cancel", main_account_sub_account_category_path(@selected_main_account, @sub_account, @category), class: "btn btn-secondary" %>
     <% else %>
-      <%= link_to "Cancel", main_account_sub_account_categories_path(@main_account, @sub_account), class: "btn btn-secondary" %>
+      <%= link_to "Cancel", main_account_sub_account_categories_path(@selected_main_account, @sub_account), class: "btn btn-secondary" %>
     <% end %>  </div>
 <% end %>
