--- a/app/views/main_transactions/_form.html.erb
+++ b/app/views/main_transactions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@main_account, @main_transaction], local: true, class: "needs-validation") do |form| %>
+<%= form_with(model: [@selected_main_account, @main_transaction], local: true, class: "needs-validation") do |form| %>
   <% if @main_transaction.errors.any? %>
     <div class="alert alert-danger">
       <h5 class="alert-heading">
@@ -21,7 +21,7 @@
 
     <!-- Amount -->
     <div class="col-6">
-      <%= form.label :amount, "Amount (#{@main_account&.currency || '€'})", class: "form-label" %>
+      <%= form.label :amount, "Amount (#{@selected_main_account&.currency || '€'})", class: "form-label" %>
       <%= form.number_field :amount, step: 0.01, class: "form-control", placeholder: "Enter amount" %>
     </div>
   </div>
@@ -47,5 +47,5 @@
   <!-- Submit and Cancel Buttons -->
   <div class="d-flex justify-content-between">
     <%= form.submit "Save Transaction", class: "btn btn-primary" %>
-    <%= link_to "Cancel", main_account_path(@main_account), class: "btn btn-secondary" %>  </div>
+    <%= link_to "Cancel", main_account_path(@selected_main_account), class: "btn btn-secondary" %>  </div>
 <% end %>
