--- a/app/views/main_transactions/_index.html.erb
+++ b/app/views/main_transactions/_index.html.erb
@@ -73,11 +73,8 @@
       <% end %>
     </tbody>
   </table>
-<% elsif current_user.main_account && current_user.main_account.sub_accounts.any? %>
+<% elsif @selected_main_account && @selected_main_account.sub_accounts.any? %>
   <p class="alert alert-info">
     <i class="fas fa-info-circle me-2"></i>No transactions added yet.
   </p>
-<% end %>
-<% if @main_account.balance != 0 %>
-  <%= link_to "New Income/Expense", new_main_account_main_transaction_path(@main_account), class: "btn btn-success" %>
 <% end %>
