--- a/app/views/main_transactions/edit.html.erb
+++ b/app/views/main_transactions/edit.html.erb
@@ -1,3 +1,3 @@
 <h1><%= action_name.capitalize %> Transaction</h1>
 
-<%= render 'form', main_transaction: @main_transaction, main_account: @main_account %>
+<%= render 'form', main_transaction: @main_transaction, main_account: @selected_main_account %>
