--- a/app/views/shared_main_account_users/_search.html.erb
+++ b/app/views/shared_main_account_users/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="mb-4">
-  <%= form_with url: search_main_account_shared_main_account_users_path(@main_account), method: :get, local: true do |form| %>
+  <%= form_with url: search_main_account_shared_main_account_users_path(@selected_main_account), method: :get, local: true do |form| %>
     <div class="input-group mb-3">
       <%= form.text_field :query, placeholder: "Search by first name, last name, or email", class: "form-control" %>
       <button class="btn btn-primary" type="submit">Search</button>
@@ -15,13 +15,13 @@
           <div class="card-body">
             <h5 class="card-title"><%= "#{user.first_name} #{user.last_name}" %></h5>
             <p class="card-text"><%= user.email %></p>
-            <% shared_user = @main_account.shared_main_account_users.find_by(user_id: user.id) %>
+            <% shared_user = @selected_main_account.shared_main_account_users.find_by(user_id: user.id) %>
             <% if shared_user && shared_user.status == 'pending' %>
-            <%= link_to "Cancel Invitation", cancel_invitation_path(@main_account, shared_user), 
+            <%= link_to "Cancel Invitation", cancel_invitation_path(@selected_main_account, shared_user), 
                         data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to cancel this invitation?" }, 
                         class: "btn btn-danger" %>
             <% else %>
-              <%= form_with url: main_account_shared_main_account_users_path(@main_account), method: :post, local: true do |form| %>
+              <%= form_with url: main_account_shared_main_account_users_path(@selected_main_account), method: :post, local: true do |form| %>
                 <%= form.hidden_field :user_id, value: user.id %>
                 <button class="btn btn-success" type="submit">Add Partner</button>
               <% end %>
