--- a/app/views/shared_main_account_users/new.html.erb
+++ b/app/views/shared_main_account_users/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', shared_main_account_user: @shared_main_account_user %>
 
-<%= link_to "Back to Partners", main_account_shared_main_account_users_path(@main_account), class: "button" %>
+<%= link_to "Back to Partners", main_account_shared_main_account_users_path(@selected_main_account), class: "button" %>
