--- a/app/views/sub_account_transactions/new.html.erb
+++ b/app/views/sub_account_transactions/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New Transaction</h1>
 
-<%= render 'form', sub_account_transaction: @sub_account_transaction, main_account: @main_account, sub_account: @sub_account, url: create_sub_account_transaction_without_subaccount_path %>
+<%= render 'form', sub_account_transaction: @sub_account_transaction, main_account: @selected_main_account, sub_account: @sub_account, url: create_sub_account_transaction_without_subaccount_path %>
